# avrex

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: tests.yml  wheel-upload.yml
src/avrex/: __init__.py  api.py  cli.py
tests/: conftest.py  test_api.py  test_cli.py
tests/cassettes/: test_login_invalid_url.yaml  test_login_reject.yaml
