[metadata]
name = avrex
version = attr: avrex.__version__
author = Carson Lam
author_email = 46059+carsonyl@users.noreply.github.com
description = AssociationVoice reports exporter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/carsonyl/avrex
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
license = Apache License 2.0
license_files =
    LICENSE

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.7
install_requires =
    MechanicalSoup >= 1.0.0
    python-dotenv
    click

[options.entry_points]
console_scripts =
    avrex = avrex.cli:main

[options.packages.find]
where=src

[options.extras_require]
dev = pytest; pytest-vcr; wheel
